package model;

public class Bibliotecario {
    public void solicitacoesEmprestimo(){}
    public void emprestar(Livro livro){}
}
